--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "buffer": "^6.0.3",
     "customize-cra": "^1.0.0",
     "materialize-css": "^1.0.0-rc.2",
+    "process": "^0.11.10",
     "react": "^16.13.1",
     "react-app-rewired": "^2.2.1",
     "react-dom": "^16.13.1",
@@ -21,10 +22,10 @@
     "uuid": "^7.0.3"
   },
   "scripts": {
-   "start": "react-app-rewired start",
-  "build": "react-app-rewired build",
-  "test": "react-app-rewired test",
-  "eject": "react-scripts eject"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
